--- a/src/css/App.css
+++ b/src/css/App.css
@@ -45,3 +45,18 @@ label input, label textarea {
   width:50%;
   margin-left: 50%;
 }
+
+.icons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.icons img {
+  flex-grow:1;
+  width:150px;
+  height:150px;
+  padding:10px;
+}
